fix(files): left-align Size column (header + data)

--- a/src/components/files/DirectoryPane.css
+++ b/src/components/files/DirectoryPane.css
@@ -46,10 +46,6 @@
 .directory-pane__h-cell:not(:last-child) {
   border-right: 1px solid var(--border);
 }
-.directory-pane__h-size {
-  justify-content: flex-end;
-  text-align: right;
-}
 
 .directory-pane__resize {
   position: absolute;
